...
        alias("Crème fraîche", "Creme fraiche", "Crème fraiche", "Creme fraîche")
        alias("Chilischote", "Chili", "Peperoni, rot", "Chilischote, rot")
        alias("Lorbeerblatt", "Lorbeerblätter", "Lorbeer")
        alias("Pimentkörner", "Piment", "Pimentkorn")
        alias("Gemüsebrühepulver", "Brühpulver", "gekörnte Brühe", "Gemüsebrühe, instant", "Instant-Gemüsebrühe")
        alias("Quark", "Magerquark", "Speisequark")
        alias("Joghurt", "Naturjoghurt", "Joghurt, natur")
        alias("Champignons", "Champignon", "Pilze, braune")
        alias("Frühlingszwiebel", "Lauchzwiebel", "Lauchzwiebeln")
        alias("Lauch", "Porree")
        alias("Speisestärke", "Maisstärke", "Stärke")
        alias("Vanillepuddingpulver", "Puddingpulver, Vanille", "Puddingpulver")
        alias("Sojasauce", "Sojasoße", "Sojasauce, helle", "Sojasauce, dunkle")
...
